--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,8 +205,9 @@ html{
     margin-bottom: 24px;
 }
 
-#slider.text-description{
+#slider .text-description{
     font-size: 15px;
+    text-shadow: 0 0 2px #000;
 }
 
 #content .content-section{
